--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,7 +10,6 @@ body {
 }
 
 .header-root {
-  border: 1px solid #f2f2f2;
   padding: 4px;
 }
 
@@ -40,9 +39,13 @@ body {
 
 .request-table {
   width: 100%;
+  margin-left: 20px;
   overflow-x: scroll;
   td {
     vertical-align: text-top;
     white-space: nowrap;
+  }
+  td:last-child {
+    width:100%;
   }
 }
